Invite link for ChatEvent.